--- a/GestionDePublicidad/src/main/resources/static/indexTrabajador.css
+++ b/GestionDePublicidad/src/main/resources/static/indexTrabajador.css
@@ -14,43 +14,6 @@ h3 {
     font-family: 'Titillium Web', sans-serif;
 }
 
-.boton-iniciar-sesion {
-    border-color: #14FFEC;
-    color: #fff;
-}
-
-.boton-iniciar-sesion:hover {
-    background-color: #14FFEC;
-    color: #212121
-}
-
-.boton-registrate {
-    background-color: #14FFEC;
-    color: #212121;
-}
-
-.boton-registrate:hover {
-    background-color: none;
-    border-color: #14FFEC;
-    color: #fff;
-}
-
-.boton-enviar {
-    background-color: #14FFEC;
-}
-
-.boton-enviar:hover {
-    background-color: #11d3c3;
-}
-
-.link-ul {
-    color: #fff;
-}
-
-.link-ul:hover {
-    color: #14FFEC;
-}
-
 
 #body {
     background-image: linear-gradient(90deg, #fff 0%, #14FFEC 200%);
@@ -79,7 +42,9 @@ h3 {
     font-family: 'Hind Siliguri', sans-serif;
 }
 
-
+#filtroYtabla{
+    padding: 10px;
+}
 
 #seccionTabla{
     color: rgb(33, 33, 33);
@@ -117,13 +82,14 @@ tbody {
 
 
 
-
-
 .seccion-servicio{
+    max-width: 500px;
+    max-height: 150px;
     background-color: rgb(255, 255, 255,0.30);
     box-shadow: 0 8px 30px 0 rgba(31,38,135,0.37);
     color: #212121;
     padding: 2%;
+    margin-bottom: 5%;
     border-radius: 15px;
 }
 
@@ -131,11 +97,10 @@ tbody {
     font-size: 40px;
 }
 
-
 .seccion-servicio .card{
     position: relative;
-    min-width: 200px;
-    height: 240px;
+    min-width: 150px;
+    height: 140px;
     box-shadow: 0 8px 30px 0 rgba(31,38,135,0.37);
     backdrop-filter: blur(5px);
     border-radius: 15px;
@@ -147,10 +112,10 @@ tbody {
 
 .seccion-servicio .card .box{
     position: absolute;
-    top: 20px;
-    left: 20px;
-    right: 20px;
-    bottom: 20px;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
     background: #90FFF6;
     box-shadow: 0 10px 20px rgba(0,0,0,0.1);
     border-radius: 15px;
@@ -169,35 +134,29 @@ tbody {
 }
 
 .seccion-servicio .card .box .content{
-    padding: 20px;
     text-align: center;
 }
 
 .seccion-servicio .card .box .content h3{
-    font-size: 1.8em;
+    font-size: 1.3em;
     color: #212121;
     z-index: 1;
     transition: 0.5s;
 }
 
 .seccion-servicio .card .box .content p{
-    font-size: 1em;
-    font-weight: 300;
     color: #777;
     z-index: 1;
     transition: 0.5s;
 }
 
 .seccion-servicio .card:hover .box .content p{
-    font-size: 1em;
-    font-weight: 300;
     color: #212121;
     z-index: 1;
     transition: 0.5s;
 }
 
 .seccion-servicio .card:hover .box .content h3{
-    font-size: 1.8em;
     color: #212121;
     z-index: 1;
     transition: 0.5s;
