--- a/GestionDePublicidad/src/main/resources/static/styleDashboard.css
+++ b/GestionDePublicidad/src/main/resources/static/styleDashboard.css
@@ -27,43 +27,30 @@ p{
     font-family: 'Titillium Web', sans-serif;
 }
 
-.boton-iniciar-sesion {
-    border-color: #14FFEC;
+.dashboard{
+    width: 80px;
+}
+
+.dropdown-menu{
+    background-color: #212121;
+}
+
+.dropdown-item{
     color: #fff;
 }
 
-.boton-iniciar-sesion:hover {
-    background-color: #14FFEC;
-    color: #212121
-}
-
-.boton-registrate {
-    background-color: #14FFEC;
-    color: #212121;
-}
-
-.boton-registrate:hover {
-    background-color: none;
-    border-color: #14FFEC;
+.dropdown-toggle{
     color: #fff;
 }
 
-.boton-enviar {
-    background-color: #14FFEC;
-}
-
-.boton-enviar:hover {
-    background-color: #11d3c3;
-}
-
-.link-ul {
-    color: #fff;
-}
-
-.link-ul:hover {
+.dropdown-toggle:hover{
     color: #14FFEC;
 }
 
+.dropdown-item:active, .dropdown-item:focus, .dropdown-item:hover{
+    background-color: #14FFEC;
+    color: #212121;
+}
 
 
 body{
@@ -74,26 +61,25 @@ body{
     background-image: linear-gradient(90deg,#fff 0%, #14FFEC 200%);
 }
 
-#cards{
-  margin: 80px auto;
-  max-width: 960px;
+
+
+.cards{
+  padding: 5px;
   text-align: center;
-  margin-top: 0%;
-  margin-bottom: 0;
+  
 }
 
 .card{
     display: inline-block;
     margin: 8px;
-    max-width: 300px;
     perspective: 1000;
     position: relative;
     text-align: left;
     transition: all 0.3s 0s ease-in;
-    width: 300px;
+    width: 200px;
+    height: 250px;
     z-index: 1;
     border-radius: 5px;
-    
 }
 
 .card:hover{
@@ -111,7 +97,7 @@ body{
 
 .card__image{
     background: whitesmoke;
-    max-width: 298px;
+    max-width: 200px;
 }
 
 .card-title{
@@ -140,20 +126,6 @@ body{
     text-shadow:rgb(33, 33, 33) 0.5 0.5;
     color: rgb(119, 67, 219) !important;
     font-family: 'Titillium Web', sans-serif;
-}
-
-
-
-.footer{
-     background-color: rgb(33, 33, 33);
-}
-
-#logoFooter{
-    margin-bottom: 0;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    width: 10%;
 }
 
 .nav-link{
