--- a/GestionDePublicidad/src/main/resources/templates/indexCliente.html
+++ b/GestionDePublicidad/src/main/resources/templates/indexCliente.html
@@ -43,13 +43,11 @@
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/index" class="nav-link px-2 link-ul">Inicio</a></li>
-                <li><a href="#Agenda" class="nav-link px-2 link-ul">Agenda</a></li>
+                <li><a href="" class="nav-link px-2 link-ul"></a></li>
             </ul>
 
             <div class="col-md-3 text-end">
-                <a href="/perfil"><button type="button" class="btn boton-registrate">Mi perfil</button></a><!-- falta vista -->
-                <a th:href="@{/logout}"><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Cerrar
-                        Sesion</button></a><!-- falta accion -->
+               
             </div>
         </header>
     </div>
@@ -61,42 +59,88 @@
         <section id="mensajeSuperior">
             <div id="burbuja">
                 <h1>Bienvenido</h1>
-                <p>A continuacion se listaran los proyectos en que participa, la opcion de agregar mas proyectos y
-                    su
-                    agenda de contactos interna. </p>
+                <p>A continuacion se listaran los proyectos en que participa. </p>
             </div>
         </section>
         <!-- FIN INICIO/BIENVENIDA-->
-
-        <!--PROYECTOS-->
-        <div id="seccionTabla">
-            <h1>Proyectos propios</h1>
-            <table>
-                <thead>
-                    <tr>
-                        <th scope="col">Proyecto</th>
-                        <th scope="col">Inicio</th>
-                        <th scope="col">Fin</th>
-                        <th scope="col">Estado</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="proyecto : ${proyectos}">
-                        <td class="celdas" th:text="${proyecto.nombre}"><a th:href="@{proyecto/__${proyecto.id}__}"></a></td>
-                        <!--no hay vista, VER LUEGO DE ARREGLAR RELACIONES EN BACK-->
-                        <td class="celdas" th:text="${proyecto.fechaInicio}"></td>
-                        <td class="celdas" th:text="${proyecto.fechaFin}"></td>
-                        <td class="celdas" th:text="${proyecto.estado}"></td>
-                    </tr>
-                </tbody>
-            </table>
-            <!--FIN PROYECTOS-->
-            
-                <!-- JAVASCRIPT BOOTSTRAP -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
-    <!-- JAVASCRIPT -->
+        
+            <div id="flitroYtabla" class="row">
+                <div class="col-4">
+                    <!--FILTROS-->
+                    <section id="mensajeFiltros">
+                        <form th:action="@{/proyecto/tablaProyectos/nombre}">
+                            <!-- VER -->
+                            <label for="nombre">
+                                <p>Filtro por nombre</p>
+                            </label>
+                            <input type="text" id="nombre" name="nombre" placeholder="" />
+                            <button type="submit" class="btn btn-light">Buscar</button>
+                        </form>
+    
+                        <form th:action="@{/proyecto/tablaProyectos/fechaInicio}">
+                            <!-- HAY QUE MODIFICAR -->
+                            <label for="inicio">
+                                <p>Filtro por fecha de inicio</p>
+                            </label>
+                            <input type="date" id="inicio" name="fechaInicio" placeholder="" />
+                            <button type="submit" class="btn btn-light">Buscar</button>
+                        </form>
+    
+                        <form th:action="@{/proyecto/tablaProyectos/fechaFin}">
+                            <!-- HAY QUE MODIFICAR -->
+                            <label for="fin">
+                                <p>Filtro por fecha de fin</p>
+                            </label>
+                            <input type="date" id="fin" name="fechaFin" placeholder="" />
+                            <button type="submit" class="btn btn-light">Buscar</button>
+                        </form>
+    
+                        <form th:action="@{/proyecto/tablaProyectos/estado}">
+                            <!-- HAY QUE MODIFICAR -->
+                            <label for="estado">
+                                <p>Filtro por estado</p>
+                            </label>
+                            <select id="estado" name="estado">
+                                <option></option>
+                                <option value="FINALIZADO">Finalizado</option>
+                                <option value="ENPROCESO">En Proceso</option>
+                                <option value="INICIADO"> Iniciado</option>
+                            </select>
+                            <button type="submit" class="btn btn-light">Buscar</button>
+                        </form>
+                    </section>
+                    <!--fin FILTROS-->
+                </div>
+                <div class="col-8">
+                    <!--PROYECTOS-->
+                    <div id="seccionTabla">
+                        <h1>Proyectos</h1>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th scope="col">Nombre</th>
+                                    <th scope="col">Inicio</th>
+                                    <th scope="col">Fin</th>
+                                    <th scope="col">Estado</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr th:each="proyecto : ${proyectos}">
+                                    <td class="celdas" th:text="${proyecto.nombre}"><a
+                                            th:href="@{proyecto/__${proyecto.id}__}"></a>
+                                    </td>
+                                    <!--no hay vista, VER LUEGO DE ARREGLAR RELACIONES EN BACK-->
+                                    <td class="celdas" th:text="${proyecto.fechaInicio}"></td>
+                                    <td class="celdas" th:text="${proyecto.fechaFin}"></td>
+                                    <td class="celdas" th:text="${proyecto.estado}"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <!--FIN PROYECTOS-->
+                    </div>
+                </div>
+            </div>
+               
 </body>
 
 </html>
