--- a/GestionDePublicidad/src/main/resources/templates/indexTrabajador.html
+++ b/GestionDePublicidad/src/main/resources/templates/indexTrabajador.html
@@ -86,7 +86,7 @@
                         <!--no hay vista, VER LUEGO DE ARREGLAR RELACIONES EN BACK-->
                         <td class="celdas" th:text="${proyecto.fechaInicio}"></td>
                         <td class="celdas" th:text="${proyecto.fechaFin}"></td>
-                        <td class="celdas" th:text="${proyecto.estado}"></td>
+                        <td class="celdas" th:text="${proyecto.estadoProyecto}"></td>
                     </tr>
                 </tbody>
             </table>
