--- a/GestionDePublicidad/src/main/resources/templates/login.html
+++ b/GestionDePublicidad/src/main/resources/templates/login.html
@@ -14,6 +14,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@600&family=Titillium+Web&display=swap" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    >
 </head>
 <body>
         <!-- INICIO NAVBAR -->
@@ -61,9 +65,16 @@
                 <span class="mt-3">No tenes cuenta? <a href="/registro">Registrate</a> </span>
                 </div>
                 <div class="d-flex justify-content-center  mt-4">
-                <button type="submit" class="btn boton-iniciarSesion">Iniciar Sesion</button>
+                <button type="submit" class="btn boton-iniciarSesion">Iniciar Sesion</button>  
+                </div>
+                 <div class="d-flex justify-content-center fw-lighter contenedor-span mt-2">
+                     <a href="#"><span>¿Has olvidado tu contraseña?</span></a>
+                </div>
+                <div class="d-flex justify-content-center text-danger contenedor-span mt-5">
+                     <p th:text="${error}" class="animate__animated animate__flash" ></p>
                 </div>
             </form>
+     
         </div>
         </div>
     </section>
