--- a/GestionDePublicidad/src/main/resources/static/indexCliente.css
+++ b/GestionDePublicidad/src/main/resources/static/indexCliente.css
@@ -19,17 +19,12 @@ body {
     text-align: center;
 }
 
-
-
 #mensajeSuperior {
-    height: 250px;
-    width: 100%;
     background-color: transparent;
     padding-left: 15%;
     padding-right: 15%;
     padding-top: 1%;
-    padding-bottom: 0%;
-    margin: 0;
+    padding-bottom: 5%;
 }
 
 #burbuja{
@@ -38,33 +33,94 @@ body {
     box-shadow: 0 8px 20px 0 rgba(31,38,135,0.37);
     backdrop-filter: blur(5px);
     border-radius: 15px;
-    margin-bottom: 2%;
 }
-#burbuja h1{
-    font-size: 30px;
-    padding: 0%;
-    margin: 0%;
-}
-#burbuja p {
+
+#mensajeSuperior p {
     background-color: transparent;
     color: rgb(33, 33, 33);
     font-family: 'Hind Siliguri', sans-serif;
 }
 
-
-
-
 .row{
     padding: 0%;
-    background-color: transparent;
+}
+.col-6:last-child{
+    padding: 0%;
+    margin: 0%;
+}
+.col-6:first-child{
+    align-items: center;
+    text-align: left;
+    padding-right: 0;
+    padding-left: 10%;
+}
+
+#filtroYtabla{
+    padding: 10px;
+}
+
+button{
+    margin: 3px;
+    border-color: rgb(33, 33, 33);
+    color: #fff;
+}
+
+button:hover{
+    background-color: #14FFEC;
+    color: rgb(33, 33, 33);
+    transition: 0.3s  all;
+}
+
+
+
+#seccionTabla{
+    color: rgb(33, 33, 33);
+}
+#seccionTabla h1{
+    margin: 0%;
+}
+table {
+    justify-content: center;
+    display: flex !important;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+table tr:nth-child(even) {
+    background-color: rgb(255, 233, 177);
+}
+
+thead{
+    font-family: 'Hind Siliguri', sans-serif;
+    font-size: large;
+    text-align: center;
+}
+
+tbody {
+    padding: 2%;
+}
+
+.celdas {
+    font-family: 'Lora', sans-serif;
+    text-align: center;
+    border-radius: 3px;
+    padding: 5px;
+    background-color: rgb(255, 233, 177);
+
+}
+
+p{
+    margin: 0;
 }
 
 .seccion-servicio{
-    max-width: 400px;
+    max-width: 500px;
     max-height: 150px;
+    background-color: rgb(255, 255, 255,0.30);
+    box-shadow: 0 8px 30px 0 rgba(31,38,135,0.37);
     color: #212121;
     padding: 2%;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
     border-radius: 15px;
 }
 
@@ -81,7 +137,7 @@ body {
     border-radius: 15px;
     margin: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
-    background-color: transparent;
+    background-color: rgb(255, 255, 255,0.30);
     cursor: pointer;
 }
 
@@ -99,6 +155,8 @@ body {
     align-items: center;
     transition: 0.5s;
 }
+
+
 
 .seccion-servicio .card:hover .box{
     transform: translateY(-10px);
@@ -142,73 +200,16 @@ body {
 
 
 
-.col-6:last-child{
-    padding: 0%;
-    margin: 0%;
-}
-.col-6:first-child{
-    align-items: center;
-    text-align: left;
-    padding-right: 0;
-    padding-left: 10%;
-}
 
-#filtroYtabla{
-    padding: 10px;
-}
 
-button{
-    margin: 3px;
-    border-color: rgb(33, 33, 33);
+
+
+.footer {
+    background-color: #212121;
     color: #fff;
 }
 
-button:hover{
-    background-color: #14FFEC;
-    color: rgb(33, 33, 33);
-    transition: 0.3s  all;
-}
-
-
-#seccionTabla{
-    color: rgb(33, 33, 33);
-}
-
-#seccionTabla h1{
-    margin: 0%;
-    font-size: 40px;
-}
-
-table {
-    justify-content: center;
-    display: flex !important;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-
-table tr:nth-child(even) {
-    background-color: rgb(255, 233, 177);
-}
-
-thead{
-    font-family: 'Hind Siliguri', sans-serif;
-    font-size: large;
-    text-align: center;
-}
-
-tbody {
-    padding: 2%;
-}
-
-.celdas {
-    font-family: 'Lora', sans-serif;
-    text-align: center;
-    border-radius: 3px;
-    padding: 5px;
-    background-color: rgb(255, 233, 177);
-
-}
-
-p{
-    margin: 0;
+.contenedor-logos img {
+    width: 120px;
+    height: 100px;
 }
