--- a/GestionDePublicidad/src/main/resources/static/styleDashboard.css
+++ b/GestionDePublicidad/src/main/resources/static/styleDashboard.css
@@ -57,16 +57,16 @@ body{
     background-image: linear-gradient(90deg,#fff 0%, #14FFEC 200%);
 }
 
-#cuerpo{
-    background-image: linear-gradient(90deg,#fff 0%, #14FFEC 200%);
+
+
+.col-12{
+    align-items: center;
+    text-align: center;
 }
-
-
 
 .cards{
   padding: 5px;
-  text-align: center;
-  
+  height: 270px;
 }
 
 .card{
@@ -77,7 +77,7 @@ body{
     text-align: left;
     transition: all 0.3s 0s ease-in;
     width: 200px;
-    height: 250px;
+    height: 250px ;
     z-index: 1;
     border-radius: 5px;
 }
@@ -91,7 +91,7 @@ body{
 
 .card__image-holder{
     background: whitesmoke;
-    height: 0;
+    height: 0px;
     padding-bottom: 75%;
 }
 
