--- a/GestionDePublicidad/src/main/resources/templates/dashboard.html
+++ b/GestionDePublicidad/src/main/resources/templates/dashboard.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <!-- CSS -->
-  <link rel="stylesheet" href="styleDashboard.css">
+  <link rel="stylesheet" href="/GestionDePublicidad/src/main/resources/static/styleDashboard.css">
   <!--FONTS-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,20 +51,20 @@
 
 
   <!-- INICIO CARDS -->
-  <div class="container-fluid" id="cuerpo">
+  <div class="container-fluid">
     <div class="col-12">
       <section class="cards">
+
         <a th:href="@{/proyecto/tablaProyectos}">
           <div class="card">
             <div class="card__image-holder">
-              <img class="card__image" src="/img/botones/Proyectos1.png"
-                alt="img" />
+              <img class="card__image" src="/img/botones/Proyectos1.png" alt="img" />
             </div>
             <div class="card-title">
               <h2> Filtro por Proyecto</h2>
             </div>
             <div class="card-description">
-              Se listaran todos los proyectos y podra filtrarlos por sus atributos. <br><br />
+              Se listaran todos los proyectos y podra filtrarlos por sus atributos.
             </div>
           </div>
         </a>
@@ -72,14 +72,13 @@
         <a th:href="@{/admin/tablaTrabajadores}">
           <div class="card">
             <div class="card__image-holder">
-              <img class="card__image" src="/img/botones/Trabajadores.png"
-                alt="img" />
+              <img class="card__image" src="/img/botones/Trabajadores.png" alt="img" />
             </div>
             <div class="card-title">
               <h2> Filtro por Trabajador</h2>
             </div>
             <div class="card-description">
-              Podra ver la lista de trabajadores y filtrarlos por sus atributos.<br><br />
+              Podra ver la lista de trabajadores y filtrarlos por sus atributos.
             </div>
           </div>
         </a>
@@ -87,8 +86,7 @@
         <a th:href="@{/admin/tablaClientes}">
           <div class="card">
             <div class="card__image-holder">
-              <img class="card__image"
-                src="/img/botones/User Avatar_Isometric.png" alt="img" />
+              <img class="card__image" src="/img/botones/User Avatar_Isometric.png" alt="img" />
             </div>
             <div class="card-title">
               <h2> Filtro por Usuario </h2>
@@ -106,33 +104,30 @@
       <section class="cards">
         <div class="card">
           <div class="card__image-holder">
-            <img class="card__image" src="/img/botones/help.png"
-              alt="img" />
+            <img class="card__image" src="/img/botones/help.png" alt="img" />
           </div>
           <div class="card-title">
             <h2 id="Ayuda"> Atencion Tecnica </h2>
           </div>
           <div class="card-description">
-            En caso de necesitar ayuda tecnica, debera comunicarse al email serTecGrupo3EGG@gmail.com <br><br />
+            En caso de necesitar ayuda tecnica, debera comunicarse al email serTecGrupo3EGG@gmail.com
           </div>
         </div>
         <div class="card">
           <div class="card__image-holder">
-            <img class="card__image"
-              src="/img/botones/Video Editor_Flat.png" alt="img" />
+            <img class="card__image" src="/img/botones/Video Editor_Flat.png" alt="img" />
           </div>
           <div class="card-title">
             <h2> Tutorial de uso</h2>
             <!--LINK VIDEO -->
           </div>
           <div class="card-description">
-            Ante cualquier consulta de como usar la pagina, por favor, mire este tutorial. <br><br /><br>
+            Ante cualquier consulta de como usar la pagina, por favor, mire este tutorial.
           </div>
         </div>
         <div class="card">
           <div class="card__image-holder">
-            <img class="card__image" src="/img/botones/Unlock_Flat.png"
-              alt="img" />
+            <img class="card__image" src="/img/botones/Unlock_Flat.png" alt="img" />
           </div>
           <div class="card-title">
             <h2> Advertencias</h2>
