--- a/GestionDePublicidad/src/main/resources/templates/indexCliente.html
+++ b/GestionDePublicidad/src/main/resources/templates/indexCliente.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WeThink-Trabajador</title>
+    <title>WeThink-Cliente</title>
     <!-- CSS BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -13,7 +13,7 @@
     <!-- ICONOS BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="/indexTrabajador.css">
+    <link rel="stylesheet" href="/GestionDePublicidad/src/main/resources/static/indexCliente.css">
     <!-- FONT TITULO -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,30 +32,26 @@
 
 <body>
     <!-- INICIO NAVBAR -->
-    <div class="container-fluid bdn">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-            <a href="" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
-                <img src="img/logos/logo-diamante-blanco.png" style="width: 15%;" alt="logo">
-                <img id="lettering"
-                    src="https://see.fontimg.com/api/renderfont4/axgPE/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjRkZGRkZGIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/V2VUaGluaw/cannu-regular.png"
-                    alt="wethink">
-            </a>
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+        <a href="" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
+            <img src="img/logos/logo-diamante-blanco.png" style="width: 15%;" alt="logo">
+            <img id="lettering"
+                src="https://see.fontimg.com/api/renderfont4/axgPE/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjRkZGRkZGIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/V2VUaGluaw/cannu-regular.png"
+                alt="wethink">
+        </a>
 
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="/index" class="nav-link px-2 link-ul">Inicio</a></li>
-                <li><a href="" class="nav-link px-2 link-ul"></a></li>
-            </ul>
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="/index" class="nav-link px-2 link-ul">Inicio</a></li>
+            <li><a href="" class="nav-link px-2 link-ul"></a></li>
+        </ul>
 
-            <div class="col-md-3 text-end">
-               
-            </div>
-        </header>
-    </div>
+        <div class="col-md-3 text-end">
+        </div>
+    </header>
     <!-- FIN NAVBAR -->
 
-
-    <!--INICIO/BIENVENIDA-->
-    <div id="body">
+    <div class="container-fluid">
+        <!--INICIO/BIENVENIDA-->
         <section id="mensajeSuperior">
             <div id="burbuja">
                 <h1>Bienvenido</h1>
@@ -63,81 +59,80 @@
             </div>
         </section>
         <!-- FIN INICIO/BIENVENIDA-->
-        
-            <div id="flitroYtabla" class="row">
-                <div class="col-4">
-                    <!--FILTROS-->
-                    <section id="mensajeFiltros">
-                        <form th:action="@{/proyecto/tablaProyectos/nombre}">
-                            <!-- VER -->
-                            <label for="nombre">
-                                <p>Filtro por nombre</p>
-                            </label>
-                            <input type="text" id="nombre" name="nombre" placeholder="" />
-                            <button type="submit" class="btn btn-light">Buscar</button>
-                        </form>
-    
-                        <form th:action="@{/proyecto/tablaProyectos/fechaInicio}">
-                            <!-- HAY QUE MODIFICAR -->
-                            <label for="inicio">
-                                <p>Filtro por fecha de inicio</p>
-                            </label>
-                            <input type="date" id="inicio" name="fechaInicio" placeholder="" />
-                            <button type="submit" class="btn btn-light">Buscar</button>
-                        </form>
-    
-                        <form th:action="@{/proyecto/tablaProyectos/fechaFin}">
-                            <!-- HAY QUE MODIFICAR -->
-                            <label for="fin">
-                                <p>Filtro por fecha de fin</p>
-                            </label>
-                            <input type="date" id="fin" name="fechaFin" placeholder="" />
-                            <button type="submit" class="btn btn-light">Buscar</button>
-                        </form>
-    
-                        <form th:action="@{/proyecto/tablaProyectos/estado}">
-                            <!-- HAY QUE MODIFICAR -->
-                            <label for="estado">
-                                <p>Filtro por estado</p>
-                            </label>
-                            <select id="estado" name="estado">
-                                <option></option>
-                                <option value="FINALIZADO">Finalizado</option>
-                                <option value="ENPROCESO">En Proceso</option>
-                                <option value="INICIADO"> Iniciado</option>
-                            </select>
-                            <button type="submit" class="btn btn-light">Buscar</button>
-                        </form>
-                    </section>
-                    <!--fin FILTROS-->
-                </div>
-                <div class="col-8">
-                    <!--PROYECTOS-->
-                    <div id="seccionTabla">
-                        <h1>Proyectos</h1>
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th scope="col">Nombre</th>
-                                    <th scope="col">Inicio</th>
-                                    <th scope="col">Fin</th>
-                                    <th scope="col">Estado</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each="proyecto : ${proyectos}">
-                                    <td class="celdas" th:text="${proyecto.nombre}"><a
-                                            th:href="@{proyecto/__${proyecto.id}__}"></a>
-                                    </td>
-                                    <!--no hay vista, VER LUEGO DE ARREGLAR RELACIONES EN BACK-->
-                                    <td class="celdas" th:text="${proyecto.fechaInicio}"></td>
-                                    <td class="celdas" th:text="${proyecto.fechaFin}"></td>
-                                    <td class="celdas" th:text="${proyecto.estado}"></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <!--FIN PROYECTOS-->
-                    </div>
+
+        <section id="flitroYtabla" class="row">
+            <div class="col-6">
+                <!--FILTROS-->
+                <section id="mensajeFiltros">
+                    <form th:action="@{/cliente/tablaProyectos/nombre}">
+                        <label for="nombre">
+                            <p>Filtro por nombre</p>
+                        </label><br>
+                        <input type="text" id="nombre" name="nombre" placeholder="" />
+                        <button type="submit" class="btn btn-light">Buscar</button>
+                    </form>
+
+                    <form th:action="@{/cliente/tablaProyectos/fechaInicio}">
+                        <label for="inicio">
+                            <p>Filtro por fecha de inicio</p>
+                        </label><br>
+                        <input type="date" id="inicio" name="fechaInicio" placeholder="" />
+                        <button type="submit" class="btn btn-light">Buscar</button>
+                    </form>
+
+                    <form th:action="@{/cliente/tablaProyectos/fechaFin}">
+
+                        <label for="fin">
+                            <p>Filtro por fecha de fin</p>
+                        </label><br>
+                        <input type="date" id="fin" name="fechaFin" placeholder="" />
+                        <button type="submit" class="btn btn-light">Buscar</button>
+                    </form>
+
+                    <form th:action="@{/cliente/tablaProyectos/estado}">
+                        <label for="estado">
+                            <p>Filtro por estado</p>
+                        </label><br>
+                        <select id="estado" name="estado">
+                            <option></option>
+                            <option value="FINALIZADO">Finalizado</option>
+                            <option value="ENPROCESO">En Proceso</option>
+                            <option value="INICIADO"> Iniciado</option>
+                        </select>
+                        <button type="submit" class="btn btn-light">Buscar</button>
+                    </form>
+                </section>
+                <!--fin FILTROS-->
+            </div>
+            <div class="col-6">
+                <!--PROYECTOS-->
+                <div id="seccionTabla">
+                    <h1>Proyectos</h1>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Inicio</th>
+                                <th scope="col">Fin</th>
+                                <th scope="col">Estado</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="proyecto : ${proyectos}">
+                                <td class="celdas" th:text="${proyecto.nombre}"><a
+                                        th:href="@{proyecto/__${proyecto.id}__}"></a>
+                                </td><!-- LINKEAR-->
+                                <td class="celdas" th:text="${proyecto.fechaInicio}"></td>
+                                <td class="celdas" th:text="${proyecto.fechaFin}"></td>
+                                <td class="celdas" th:text="${proyecto.estado}"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <!--FIN PROYECTOS-->
                 </div>
             </div>
-             
+        </section>
+    </div>
+</body>
+
+</html>
