--- a/GestionDePublicidad/src/main/resources/templates/tablaClientes.html
+++ b/GestionDePublicidad/src/main/resources/templates/tablaClientes.html
@@ -12,7 +12,7 @@
   <!-- ICONOS BOOTSTRAP -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
   <!-- CSS -->
-  <link rel="stylesheet" href="/tablaProyectos.css">
+  <link rel="stylesheet" href="/GestionDePublicidad/src/main/resources/static/tablaProyectos.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,8 +21,8 @@
 </head>
 
 <body>
-   <!-- INICIO NAVBAR -->
-   <div class="container-fluid bdn">
+  <!-- INICIO NAVBAR -->
+  <div class="container-fluid bdn">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
       <a href="" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
         <img class="diamante"
@@ -41,7 +41,8 @@
 
       <div class="col-md-3 text-end">
         <a href="/perfil"><button type="button" class="btn boton-registrate">Mi perfil</button></a><!-- falta vista -->
-        <a th:href="@{/logout}"><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Cerrar Sesion</button></a>
+        <a th:href="@{/logout}"><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Cerrar
+            Sesion</button></a>
         <!-- falta accion -->
       </div>
     </header>
@@ -50,56 +51,73 @@
 
   <div class="contenedorBody">
 
-     <!--INICIO/BIENVENIDA-->
-  <div id="body">
+    <!--INICIO/BIENVENIDA-->
+    <div id="body">
       <section id="mensajeSuperior">
-          <div id="burbuja">
-              <h1>Clientes</h1>
-              <p>A continuacion se listaran los clientes existentes en la base de datos, puede filtrarlos o no. Para modificar o eliminar debe acceder al mismo. </p>
-          </div>
+        <div id="burbuja">
+          <h1>Clientes</h1>
+          <p>A continuacion se listaran los clientes existentes en la base de datos, puede filtrarlos o no. Para
+            modificar o eliminar debe acceder al mismo. </p>
+        </div>
       </section>
       <!-- FIN INICIO/BIENVENIDA-->
-      
+
       <!-- INICIO FILTROS -->
-    <section id="mensajeFiltros">
-      <form th:action="@{/admin/tablaClientes/search}" method="post"> <!-- VER -->
-        <label for="nombre">
-          <p>Filtro por nombre</p>
-        </label>
-        <input type="text" id="nombre" name="nombre" placeholder="Buscar por nombre"/>
-        <button type="submit" class="btn btn-light">Buscar</button>
-      </form>
+      <section id="mensajeFiltros">
+        <form th:action="@{/admin/tablaClientes/search}" method="post">
+          <label for="nombre">
+            <p>Filtro por nombre</p>
+          </label>
+          <input type="text" id="nombre" name="nombre" placeholder="nombre" />
+          <button type="submit" class="btn btn-light">Buscar</button>
+        </form>
 
-<!--      <form th:action="@{/filtroPorEmail}" method="post"> &lt;!&ndash; VER &ndash;&gt;
-        <label for="mail">
-          <p>Filtro por E-mail</p>
-        </label>
-        <input type="text" id="mail" name="email" placeholder="Buscar por mail" />
-        <button type="submit" class="btn btn-light">Buscar</button>
-      </form>-->
-    </section>
-<!-- FIN FILTROS -->
+        <form th:action="@{/admin/tablaClientes/email}" method="post">
+          <label for="mail">
+            <p>Filtro por E-mail</p>
+          </label>
+          <input type="text" id="mail" name="email" placeholder="mail" />
+          <button type="submit" class="btn btn-light">Buscar</button>
+        </form>
 
-<!-- INICIO TABLA -->
-    <section class="contenedorTabla">
-      <table>
-        <thead>
-          <tr id="filaTitulos">
-            <th scope="col">Cliente</th>
-            <th scope="col">E-mail</th>          
-          </tr>
-        </thead>
-        <tbody th:each="usuario : ${usuarios}">
-          <tr>
-            <td th:text="${usuario.nombre}"> NOMBRE PRUEBA</td>
-            <td th:text="${usuario.email}"> EMAIL PRUEBA</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-    <!-- FIN TABLA -->
+        <form th:action="@{/admin/tablaClientes/nombreProyecto}" method="post">
+          <label for="proyecto">
+            <p>Filtro por proyecto</p>
+          </label>
+          <input type="text" id="proyecto" name="nombre" placeholder="" />
+          <button type="submit" class="btn btn-light">Buscar</button>
+        </form>
 
-  </div>
+      </section>
+      <!-- FIN FILTROS -->
+
+      <!-- INICIO TABLA -->
+      <section class="contenedorTabla">
+        <table>
+          <thead>
+            <tr id="filaTitulos">
+              <th scope="col">Nombre</th>
+              <th scope="col">E-mail</th>
+              <th scope="col">ROL</th>
+              <th scope="col">Proyecto</th>
+
+            </tr>
+          </thead>
+          <tbody th:each="usuario:${usuarios}">
+            <tr>
+              <td th:text="${usuario.nombre}"> </td>
+              <td th:text="${usuario.email}"> </td>
+              <td th:text="${usuario.rol}"></td>
+              <!--LINKEAR-->
+              <td th:text="${usuario.proyecto.nombre}"></td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <!-- FIN TABLA -->
+
+    </div>
 
 </body>
+
 </html>
